# azad

./: .gitignore  CMakeLists.txt  INSTALL.txt  Manual.txt  README.md  Setup.txt  azad  hello.sh  updater  youtube.pl
Settings/: Config.ini  Modules.ini  SilentSoundACCFrame.aac  actions.ini  alarmclock.ini  camrect.ini  dirs.ini  ir-codes.ini  mails.ini  mnlactions.ini  sounds.ini  streams.ini  streamtypes.ini  users.ini
Sounds/: Alarm1.aac  Alarm2.aac  Cord.aac  DoorRing1.aac  DoorRing2.aac  DoorRing3.aac  Error1.aac  Error2.aac  Event1.aac  Guitar.aac  Piano.aac
Textures/: text1626x24.raw
src/: Makefile  audio.c  audio.h  bcm2835.c  debug.c  debug.h  dummy.c  flv-demuxer.c  flv-demuxer.h  flv-muxer.c  flv-muxer.h  globals.c  gpio.c  gpio.h  ir_control.c  ir_control.h  main.c  main.h  make_cut  make_dynamic  make_full  make_static  make_updater.sh  nal_to_rtp.c  nal_to_rtp.h  network.c  network.h  nfc.c  nfc.h  omx_client.c  omx_client.h  onvif.c  onvif.h  pthread2threadx.c  pthread2threadx.h  rc522.c  rc522.h  rtsp.c  rtsp.h  streamer.c  (+23 more)
src/include/libavutil/: ffversion.h
src/include/vc/include/: bcm_host.h
src/include/vc/include/GLES/: gl.h
src/include/vc/include/GLES2/: gl2.h
src/include/vc/include/IL/: OMX_Core.h
src/include/vc/include/interface/vmcs_host/: vcgencmd.h
src/version_gen/: generate.c
